Fix up a few warnings